added example using `.size`

--- a/pinr/functions/development-workflow_clawson.qmd
+++ b/pinr/functions/development-workflow_clawson.qmd
@@ -78,4 +78,7 @@ As always, check that it works:
 ```{r}
 starwars |> 
   get_sample(c("name", "height", "mass"))
+
+starwars |> 
+  get_sample(c("species", "homeworld"), .size = 2)
 ```
