--- a/pinr/README
+++ b/pinr/README
@@ -1,5 +1,7 @@
 Topics may include:
 - Functions
+  - `development-workflow_clawson.qmd`: Write working code before developing functions. Uses `starwars` with `across()` to write custom functions and explain dotted argument conventions. 
+  - `repetitive-workflows_clawson.qmd`: Simplify repetitive processes with functions. Uses `palmerpenguins` and `ggplot2` to apply a common style to figures. 
 - Control function flow
 - Iterating + writing functions (purrr intro)
 - Iterate with for loops (purrr revisted, map)
