--- a/pinr/functions/2025-05_pinr_andrewheiss/01-functions_andrewheiss.qmd
+++ b/pinr/functions/2025-05_pinr_andrewheiss/01-functions_andrewheiss.qmd
@@ -1,9 +1,7 @@
 ---
-title: "Functions and workflows"
-subtitle: "Week 1"
+title: "Week 1: Functions and workflows"
 author: "Andrew Heiss"
 date: "2025-05-14"
-format: html
 ---
 
 ## General resources on workflows
