--- a/pinr/functions/2025-05_pinr_andrewheiss/02-control-function-flow_andrewheiss.qmd
+++ b/pinr/functions/2025-05_pinr_andrewheiss/02-control-function-flow_andrewheiss.qmd
@@ -1,11 +1,7 @@
 ---
-title: "Control function flow"
-subtitle: "Week 2"
+title: "Week 2: Control function flow"
 author: "Andrew Heiss"
 date: "2025-05-20"
-format:
-  html:
-    toc: true
 ---
 
 ## Vectors and lists
